<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.danmachi.indra.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAddFriends"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_title_add_friend"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbarText" />

        </android.support.v7.widget.Toolbar>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="15sp"
            android:inputType="text"
            android:hint="@string/name"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etNIM"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:maxLength="8"
                android:textSize="15sp"
                android:inputType="number"
                android:hint="@string/nim"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etClass"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15sp"
                android:inputType="text"
                android:hint="@string/class_"
                tools:ignore="Autofill" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_contact"
            android:textColor="@color/cardview_dark_background"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="15sp"
            android:maxLength="15"
            android:inputType="phone"
            android:hint="@string/phone"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

        <EditText
            android:id="@+id/etIG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="15sp"
            android:inputType="text"
            android:hint="@string/instagram"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorMuted"/>

    </LinearLayout>

</ScrollView>