<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.danmachi.indra.fragment.ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarContact"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="#63636B"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_contact"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbarText" />

        </android.support.v7.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgMyAva"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/toolbarContact"
            android:layout_margin="20dp"
            android:src="@drawable/me"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="3dp" />

        <TextView
            android:id="@+id/tvMyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarContact"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/imgMyAva"
            android:text="Indra Febriastanto"
            android:textAllCaps="true"
            android:textColor="#F1E9E9"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMyName"
            android:layout_toEndOf="@id/imgMyAva"
            android:text="10116588"
            android:textAllCaps="true"
            android:textColor="#F1E9E9"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgMyAva"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/lytPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorMuted">

                <ImageView
                    android:id="@+id/imgPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="20dp"
                    android:src="@drawable/ic_phone_android_black_24dp" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgPhone"
                    android:text="@string/phone"
                    android:textColor="#F8F5F5"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPhone"
                    android:layout_toEndOf="@id/imgPhone"
                    android:text="085736896671"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/colorMuted">

                <ImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="20dp"
                    android:src="@drawable/ic_mail_outline_black_24dp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgEmail"
                    android:text="@string/email"
                    android:textColor="#F8F5F5"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMyEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvEmail"
                    android:layout_toEndOf="@id/imgEmail"
                    android:text="indrafebriasta@gmail.com"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytIg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgIg"
                android:layout_alignParentStart="true"
                android:layout_marginTop="3dp"
                android:background="#0A0A0A">

                <ImageView
                    android:id="@+id/imgIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="20dp"
                    android:src="@drawable/ic_instagram"
                    android:tint="@android:color/white" />

                <TextView
                    android:id="@+id/tvIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgIg"
                    android:text="@string/instagram"
                    android:textColor="#F7F0F0"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMyIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvIg"
                    android:layout_toEndOf="@id/imgIg"
                    android:text="indrafebbri"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>



        </LinearLayout>

    </RelativeLayout>

</ScrollView>